src/Test/ElementServices/FeatureTests/TestData/bvt/parser/Errors/Error_StyleWithoutIdTargetType.xaml
<Page xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
<DockPanel
        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
        <DockPanel.Resources>
                <Style>
                    <Setter Property="Height" Value="50" />

                </Style>
        </DockPanel.Resources>

        <ListBox>
                <ListBox.Items>
                        <ListBoxItem> 1 </ListBoxItem>
                </ListBox.Items>
        </ListBox>        
</DockPanel>
</Page>
